--- a/index.html
+++ b/index.html
@@ -26,23 +26,13 @@
                     <span><i class="material-symbols-outlined" id="icon-close">close</i></span>
                     <!-- <img src="images/icons/icon-close.svg" alt="icone de fechar" id="icon-close"> -->
                 </div>
-                <nav class="menu-list">
+                <nav class="menu-list" class="list-footer">
                     <ul>
-                        <li>
-                            <a href="#">about</a>
-                        </li>
-                        <li>
-                            <a href="#">careers</a>
-                        </li>
-                        <li>
-                            <a href="#">events</a>
-                        </li>
-                        <li>
-                            <a href="#">products</a>
-                        </li>
-                        <li>
-                            <a href="#">support</a>
-                        </li>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">careers</a></li>
+                        <li><a href="#">events</a></li>
+                        <li><a href="#">products</a></li>
+                        <li><a href="#">support</a></li>
                     </ul>
                 </nav>
             </div>  
@@ -54,7 +44,7 @@
 
 
 
-    <main class="border">
+    <main >
         <section class="description">
             <div class="description__image">
                 <img src="images/img-mobile/image-interactive.jpg" alt="pessoa usando óculos VR">
@@ -91,6 +81,26 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <img src="images/icons/logo.svg" alt="loopstudios logo">
+        <nav class="footer__list">
+            <ul>
+                <li><a href="#">about</a></li>
+                <li><a href="#">careers</a></li>
+                <li><a href="#">events</a></li>
+                <li><a href="#">products</a></li>
+                <li><a href="#">support</a></li>
+            </ul>
+        </nav>
+        <div class="footer__social-media">
+            <img src="images/icons/icon-facebook.svg" alt="logo facebook">
+            <img src="images/icons/icon-twitter.svg" alt="logo Twitter">
+            <img src="images/icons/icon-pinterest.svg" alt="logo pinterest">
+            <img src="images/icons/icon-instagram.svg" alt="logo instagram">
+        </div>
+        <p class="footer__text">&copy 2021 Loopstudios. All rigths reserved.</p>
+    </footer>
 
     <script src="Javascript.js/javascript.js"></script>
 
