--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <span><i class="material-symbols-outlined" id="icon-close">close</i></span>
                     <!-- <img src="images/icons/icon-close.svg" alt="icone de fechar" id="icon-close"> -->
                 </div>
-                <nav class="menu-list" class="list-footer">
+                <nav class="menu-list" >
                     <ul>
                         <li><a href="#">about</a></li>
                         <li><a href="#">careers</a></li>
