--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>loopstudios landing page main</title>
     <link rel="stylesheet" href="estilos/version-mobile.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
@@ -18,6 +19,17 @@
                  <button class="header__btn-menu">
                     <span><i class="material-symbols-outlined" id="menu-icon">menu</i></span>
                  </button>
+                 <div class="header__nav-bar-desktop">
+                    <nav class="header__menu-list-desktop" >
+                        <ul>
+                            <li><a href="#">about</a></li>
+                            <li><a href="#">careers</a></li>
+                            <li><a href="#">events</a></li>
+                            <li><a href="#">products</a></li>
+                            <li><a href="#">support</a></li>
+                        </ul>
+                    </nav>
+                 </div>
             </div>
 
             <div class="header__icon-active">
@@ -48,6 +60,7 @@
         <section class="description">
             <div class="description__image">
                 <img src="images/img-mobile/image-interactive.jpg" alt="pessoa usando óculos VR">
+                <!-- colocar a imagem desktop e usar a tag picture -->
             </div>
             <div class="description__text">
                 <h2>the leader in interactive vr</h2>
@@ -84,7 +97,7 @@
 
     <footer>
         <img src="images/icons/logo.svg" alt="loopstudios logo">
-        <nav class="footer__list">
+        <div class="footer__list">
             <ul>
                 <li><a href="#">about</a></li>
                 <li><a href="#">careers</a></li>
@@ -92,7 +105,7 @@
                 <li><a href="#">products</a></li>
                 <li><a href="#">support</a></li>
             </ul>
-        </nav>
+        </div>
         <div class="footer__social-media">
             <img src="images/icons/icon-facebook.svg" alt="logo facebook">
             <img src="images/icons/icon-twitter.svg" alt="logo Twitter">
